--- a/www/.ftpconfig
+++ b/www/.ftpconfig
@@ -1,9 +1,9 @@
 {
     "protocol": "sftp",
-    "host": "example.com",
+    "host": "eduil.tk",
     "port": 22,
-    "user": "user",
-    "pass": "pass",
+    "user": "golanh",
+    "pass": "shirahadad123!",
     "promptForPass": false,
     "remote": "/",
     "local": "",
