--- a/package.json
+++ b/package.json
@@ -8,5 +8,13 @@
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^3.1.0",
     "ionic": "3.10.3"
+  },
+  "dependencies": {
+    "cordova-plugin-contacts": "^3.0.1"
+  },
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-contacts": {}
+    }
   }
 }
