--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "angular-form-for": "^4.1.11",
     "angular-upload": "^1.0.13",
+    "cordova-custom-config": "^5.0.2",
     "cordova-plugin-contacts": "^2.3.1",
     "ng-file-upload": "^12.2.13"
   },
@@ -19,7 +20,8 @@
     "plugins": {
       "cordova-plugin-contacts": {
         "CONTACTS_USAGE_DESCRIPTION": "your usage message"
-      }
+      },
+      "cordova-custom-config": {}
     }
   }
 }
