--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "angular-upload": "^1.0.13",
     "cordova-custom-config": "^5.0.2",
     "cordova-plugin-contacts": "^2.3.1",
+    "cordova-plugin-filepath": "^1.3.0",
     "ng-file-upload": "^12.2.13"
   },
   "cordova": {
@@ -21,7 +22,8 @@
       "cordova-plugin-contacts": {
         "CONTACTS_USAGE_DESCRIPTION": "your usage message"
       },
-      "cordova-custom-config": {}
+      "cordova-custom-config": {},
+      "cordova-plugin-filepath": {}
     }
   }
 }
